# Decima

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOLIVE.md  KERNEL.md  LICENSE  Makefile  README.md  SECURITY.md  VISION.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: ci.yml
decima/: __init__.py  _release.py  _wsgi_util.py  read_contract.py
decima/capabilities/: __init__.py  documents.py  qa.py  workspace.py
decima/cli/: __init__.py  main.py
decima/kernel/: __init__.py  authorization.py  capability.py  checkpoints.py  context_fold.py  crypto.py  hashing.py  inbox.py  interfaces.py  keystore.py  lifecycle.py  model.py  receipts.py  rotation.py  snapshot.py  verifier.py  weave.py  weft.py
decima/models/: __init__.py  accounting.py  budgets.py  providers.py  registry.py  routing.py  validation.py
decima/projections/: __init__.py  activity.py  agents.py  approvals.py  engine.py  knowledge.py  projects.py  search.py  tasks.py
decima/runtime/: __init__.py  budgets.py  cancellation.py  cells.py  execution.py  reconciliation.py  scheduler.py  supervisor.py
decima/services/: __init__.py  data_layout.py  provision.py
decima/shell/: __init__.py  serve.py
decima/workers/: __init__.py  execution.py  lease.py  profiles.py  protocol.py
deploy/: decima-firstrun  decima-shell-server  decima.service  install.sh  uninstall.sh
docs/: BACKLOG.md  DECIMA-0.3-HANDOFF.md  DECIMA-0.3-RELEASE-QUALIFICATION.md  HANDOFF.md  READ_CONTRACT.md  RELEASE-READINESS.md
docs/architecture/: kernel-extraction.md  system-overview.md  trust-boundaries.md  worker-containment.md
docs/assessments/: 2026-07-24-ultraplan-assessment.md
docs/baseline/: current-capability-inventory.md  current-check-inventory.md  current-module-inventory.md  environment.md  known-failures.md  smoke-output.txt
docs/models/: routing.md
docs/operations/: backup-diagnostics.md  installation.md  model-configuration.md
docs/product/: daily-driver.md  shell.md
docs/projections/: engine.md
docs/releases/: 0.3.0.md
docs/runtime/: completion.md
docs/services/: api.md
docs/verification/: scenarios.md
docs/workers/: isolation.md
heartbeat/: PROFILE.md  README.md  requirements.txt  run.py  smoke.py
heartbeat/checks/: 100_orientation.py  102_autorouter.py  104_disposition.py  106_payments.py  108_incremental_fold.py  110_secrets.py  112_inference.py  114_live_governance.py  116_live_intake.py  118_triage.py  120_trading.py  122_cascade.py  124_red.py  126_planning.py  128_documents.py  130_contacts.py  132_watch.py  134_audit.py  136_purple.py  138_budget.py  140_scheduling.py  142_messaging.py  144_files.py  146_projects.py  148_home.py  150_health.py  152_notify.py  154_review.py  156_knowledge.py  158_timeline.py  160_goals.py  162_journal.py  164_feed.py  166_shop.py  168_research.py  170_incident_response.py  172_recon.py  174_metrics.py  176_dashboard.py  178_expense.py  (+187 more)
heartbeat/decima/: __init__.py  access.py  accounting.py  accounts.py  ads.py  agent.py  api.py  audit.py  autonomy.py  background_check.py  backup.py  banking.py  bookmarks.py  brokerage.py  brokerage_engine.py  budget.py  builtin_manifests.py  calendar_engine.py  candidate.py  capability.py  capital.py  citizen_terminal.py  citizens.py  cli_worker.py  cloud_compute.py  cloud_storage.py  comms.py  concurrency.py  contacts.py  context.py  context_fold.py  corpus.py  crm.py  crm_engine.py  crypto.py  daemon.py  dashboard.py  datasci.py  detection.py  devops.py  (+143 more)
protocol/fixtures/: canonical.json  fold.json
scripts/: ASSIGNMENTS.md  bench_local_provider.py  check_release_metadata.py  kickoff.sh
specs/: BROWSER_WORKER.md  CAPABILITY_MAP.md  DONOR_MATRIX.md  DONOR_NOTES.md  FOLD_AND_LIFECYCLE.md  LIBRARY_TIER.md  MEMORY_ARCHITECTURE.md  MERGE_SEMANTICS.md  MORTA_CAPABILITIES.md  NONA_RECKONER.md  README.md  SANDBOX.md  SNAPSHOTS.md  SYNC.md  WEFT_PROTOCOL.md
tests/adversarial/: conftest.py  test_containment_matrix.py  test_hostile_input.py  test_worker_isolation.py  test_workspace_containment.py
tests/api/: conftest.py  test_approval_gate.py  test_auth.py  test_contracts.py  test_local_provider_loopback.py  test_loopback_server.py  test_models_setup.py  test_mutations_produce_weft_events.py  test_no_arbitrary_python.py  test_plan_service.py  test_projection_rebuild_preserves_state.py  test_qa_service.py  test_streaming.py  test_workspace_service.py
tests/architecture/: test_import_boundaries.py
tests/browser/: helpers.js  run.sh  serve_fixture.py  serverManager.js
tests/capabilities/: conftest.py  test_documents_qa.py  test_qa_grounding.py  test_workspace.py  test_workspace_worker_seam.py
tests/e2e/: test_approval_gating.py  test_backup_restore.py  test_crash_recovery.py  test_revocation.py
tests/end_to_end/: test_audit_live_provider_selectable.py
tests/install/: Dockerfile.systemd  rehearsal_core.py  rehearse_clean_install.sh  test_clean_install_rehearsal.py
tests/kernel/: test_authz_lifecycle.py  test_checkpoints.py  test_conformance.py  test_denial_codes.py  test_event_fixtures.py  test_incremental_fold_verify.py  test_interfaces.py
tests/live/: harness.py  test_app_path_live.py  test_provider_qualification_live.py  test_provider_qualification_offline.py
tests/models/: test_bench_local_provider.py  test_capability_routing.py  test_models.py  test_rank_key_invariants.py
tests/ops/: test_backup_restore.py  test_cli.py  test_diagnostics.py  test_provision.py
tests/projections/: conftest.py  test_read_contract.py  test_read_models.py  test_rebuild_equals_incremental.py  test_search_hybrid.py
tests/property/: test_capability_properties.py  test_fold_properties.py
tests/release/: test_release_metadata.py
tests/runtime/: test_budgets.py  test_cancellation.py  test_execution.py  test_reconciliation.py  test_scheduler.py  test_supervisor.py
tests/shell/: conftest.py  test_api_delegation.py  test_no_forbidden_patterns.py  test_sanitizer.py  test_screens.py  test_serve_static.py
tests/verification/: test_properties.py
tests/workers/: test_execution.py  (+2 more)
(+92 files in other folders)
