[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decima"
# Version is sourced from the single canonical definition in decima/_release.py via
# setuptools dynamic metadata (see [tool.setuptools.dynamic] below). Do NOT hard-code the
# version here — bump it in decima/_release.py, the one authoritative place.
dynamic = ["version"]
description = "Decima — a locally-hosted, capability-secured personal agent operating layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Matthew Judge" }]
keywords = ["agent", "capability", "event-sourcing", "local-first"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
]

# The kernel + runtime depend on exactly one third-party library: real Ed25519 from
# libsodium (never roll your own crypto). Everything else is the standard library.
dependencies = [
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
    # Pinned to an EXACT version: `ruff format` output is version-sensitive, so an
    # unpinned range makes `ruff format --check .` non-deterministic across hosts/CI (a
    # host running 0.15.x reformats a tree formatted by 0.6.x, and vice versa). Bump this
    # deliberately and re-run `ruff format .` in the same commit.
    "ruff==0.15.20",
    # Pinned exactly for the same reason as ruff: mypy inference/strictness moves between
    # releases, so an unpinned range makes `make type` non-deterministic across hosts/CI
    # (the 0.3.0-era `>=1.10` range let CI resolve a different release than any developer
    # ran). Bump deliberately and fix any new diagnostics in the same commit.
    "mypy==2.3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

# Console entry points required by the 0.3 handoff (§1.3). Phase 1 ships them as thin
# stubs in decima.cli.main so a clean clone installs and the commands resolve; later
# epics fill them in (DEC-044 server, DEC-051 worker, DEC-123 doctor, DEC-070 rebuild,
# DEC-121/122 backup/restore).
[project.scripts]
decima = "decima.cli.main:main"
decima-server = "decima.cli.main:server"
decima-worker = "decima.cli.main:worker"
decima-doctor = "decima.cli.main:doctor"
decima-rebuild = "decima.cli.main:rebuild"
decima-backup = "decima.cli.main:backup"
decima-restore = "decima.cli.main:restore"

# The new top-level `decima/` package is built incrementally (handoff §4.1: do not move
# everything in one destructive commit). The legacy reference implementation stays at
# `heartbeat/decima/` and is NOT packaged here; it is preserved until the new Shell +
# conformance suite reach parity (§4.2).
# Single-source the version: setuptools reads decima/_release.py::VERSION. Because that
# assignment is a plain string literal, setuptools resolves it by AST without importing
# the package, so it works under --no-build-isolation before deps are installed.
[tool.setuptools.dynamic]
version = { attr = "decima._release.VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["decima*"]
exclude = ["heartbeat*", "legacy*", "tests*", "tools*", "protocol*", "deploy*"]

# The trusted Shell ships as static assets (HTML/CSS/JS) under decima/shell/frontend/.
# They are NOT .py files, so package discovery alone drops them from a wheel — a real
# `pip install .` would then serve the Shell root as 404. Ship them as package data so
# the installed Shell serves its UI (verified by tests/install, WS2 clean-install lane).
[tool.setuptools.package-data]
"decima.shell" = [
    "frontend/*",
    "frontend/**/*",
    "frontend/js/*",
    "frontend/js/screens/*",
]

# ─────────────────────────── Ruff (format + lint) ───────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
# Legacy reference implementation is not reformatted during 0.3 (handoff §17.5: avoid
# unrelated formatting churn). New code under decima/, tests/, protocol/ is linted.
# decima/kernel is Phase-2 STAGE-1 extraction: modules copied verbatim from the reference
# with only import paths rewritten, semantics frozen and proven equal via golden fixtures
# (tests/kernel/). It is deliberately NOT reformatted here so the copy stays faithful;
# annotation + strict lint of the kernel is Stage 2 (tracked in docs/architecture/
# kernel-extraction.md). The security-critical import-boundary guard DOES run on it.
extend-exclude = ["heartbeat", "legacy", "decima/kernel"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TID"]
ignore = []

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Belt-and-suspenders against ambient authority sneaking into the kernel. The real
# enforcement is tests/architecture/test_import_boundaries.py (DEC-006); this catches
# the obvious cases at lint time. Scoped to the kernel via per-file rules below.
"requests".msg = "kernel/runtime code must not make network calls directly"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM"]

# ─────────────────────────────── mypy ───────────────────────────────
# Strict on the new package; the legacy tree is excluded (handoff §1.4: targeted typing
# exclusions permitted for legacy, NOT for the new kernel package).
[tool.mypy]
python_version = "3.11"
files = ["decima", "tests"]
# Only the legacy trees are excluded. decima/kernel was excluded during Stage-1
# extraction, but the exclusion never actually applied — mypy follows imports into the
# kernel from every other package and the strict override below fired on those followed
# files anyway (the config contradiction behind the 0.3.0-era permanently-red type lane).
# The kernel is now annotated to the strict bar, as Stage 2 always intended.
exclude = ["^heartbeat/", "^legacy/"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# The kernel package is held to the strict bar with no escape hatches.
module = "decima.kernel.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "nacl.*"
ignore_missing_imports = true

# ─────────────────────────────── pytest ───────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "conformance: protocol golden-vector conformance tests",
    "property: Hypothesis property tests for security invariants",
    "adversarial: hostile-input / worker-escape tests",
    "integration: end-to-end tests that need no live credentials",
    "live_provider: bounded live model-provider qualification; requires an operator-supplied credential (skipped by default, never run in normal CI)",
]

[tool.coverage.run]
branch = true
source = ["decima"]

[tool.coverage.report]
show_missing = true
